--- a/package.json
+++ b/package.json
@@ -22,22 +22,16 @@
   },
   "homepage": "https://github.com/johngeorgewright/eslint-config-jgw#readme",
   "peerDependencies": {
-    "eslint": ">=3",
-    "eslint-config-standard": ">=10.2.1",
-    "eslint-plugin-import": ">=2.2.0",
-    "eslint-plugin-node": ">=4.2.2",
-    "eslint-plugin-promise": ">=3.5.0",
-    "eslint-plugin-standard": ">=3.0.0"
+    "eslint": ">=5",
+    "eslint-config-standard": ">=12.0.0",
+    "eslint-plugin-import": ">=2.14.0",
+    "eslint-plugin-node": ">=5.2.1",
+    "eslint-plugin-promise": ">=3.8.0",
+    "eslint-plugin-standard": ">=3.1.0"
   },
   "devDependencies": {
-    "commitizen": "^2.9.6",
-    "cz-conventional-changelog": "^2.0.0",
-    "eslint": "^4.9.0",
-    "eslint-config-standard": "^10.2.1",
-    "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-node": "^5.2.1",
-    "eslint-plugin-promise": "^3.5.0",
-    "eslint-plugin-standard": "^3.0.0"
+    "commitizen": "^3.0.2",
+    "cz-conventional-changelog": "^2.1.0"
   },
   "config": {
     "commitizen": {
