--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,12 @@
 language: node_js
 before_install:
-  - npm install -g npm@5
   - npm install -g greenkeeper-lockfile@1
-before_script: greenkeeper-lockfile-update
-after_script: greenkeeper-lockfile-upload
+before_script:
+  - greenkeeper-lockfile-update
+  - npm run install-peers
+after_script:
+  - npm run uninstall-peers
+  - greenkeeper-lockfile-upload
 deploy:
   provider: npm
   email: johngeorge.wright@gmail.com
